pagamentos offline excel

--- a/templates/pagamento_offline/index.html.twig
+++ b/templates/pagamento_offline/index.html.twig
@@ -205,6 +205,7 @@
                         </tbody>
                     </table>
                     <a class="btn btn-primary" href="{{ path('app_pagamento_offline_new') }}">Create new</a>
+                    <a class="btn btn-primary" href="/assets/pagamentos_offline.xlsx" role="button">Exportar</a>
                 </div>
             </div>
             {#            {% if number_of_pages >= 1 %}
