--- a/templates/pagamento_offline/edit.html.twig
+++ b/templates/pagamento_offline/edit.html.twig
@@ -5,6 +5,7 @@
 {% block title %}Pagamentos Offline{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
 {% endblock %}
 
 {% block pageHeading %}Edit Pagamentos Offline{% endblock %}
@@ -44,4 +45,5 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
 {% endblock %}
