--- a/templates/pagamento_offline/index.html.twig
+++ b/templates/pagamento_offline/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Pagamentos Offline{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
 {% endblock %}
 
 {% block pageHeading %}Pagamentos Offline{% endblock %}
@@ -233,6 +234,6 @@
 {% endblock %}
 
 {% block javascripts %}
-
+{{ parent() }}
 
 {% endblock %}
