--- a/templates/pagamento_offline/new.html.twig
+++ b/templates/pagamento_offline/new.html.twig
@@ -21,6 +21,7 @@
 {% block title %}Pagamentos Offline{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
 {% endblock %}
 
 {% block pageHeading %}Create Pagamentos Offline{% endblock %}
@@ -52,4 +53,5 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
 {% endblock %}
