--- a/templates/private/coupon/index.html.twig
+++ b/templates/private/coupon/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Cupões{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
 {% endblock %}
 
 {% block pageHeading %}Lista de Cupões{% endblock %}
@@ -141,4 +142,5 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
 {% endblock %}
