--- a/templates/private/statistics/statistics.html.twig
+++ b/templates/private/statistics/statistics.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Resumo{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
 {% endblock %}
 
 {% block pageHeading %}Resumo das Viagens{% endblock %}
 
 {% block pageActions %}
+    
 {% endblock %}
 
 {% block body %}
@@ -116,4 +118,5 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
 {% endblock %}
