--- a/templates/private/optionals/optionals.html.twig
+++ b/templates/private/optionals/optionals.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Opcionais{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
 {% endblock %}
 
 {% block pageHeading %}Visão dos opcionais da Viagem à Fitur{% endblock %}
@@ -264,7 +265,7 @@
 {% endblock %}
 
 {% block javascripts %}
-
+{{ parent() }}
         <script>
 
 
