--- a/templates/private/trips/trips.html.twig
+++ b/templates/private/trips/trips.html.twig
@@ -279,7 +279,7 @@
 
 
         new DataTable('#trips', {
-            order: [[0, 'desc']],
+            "order": [],
             language: {
                 info: 'Mostrando página _PAGE_ de _PAGES_',
                 infoEmpty: 'Nenhum registo disponível',
