--- a/templates/private/trips/trips.html.twig
+++ b/templates/private/trips/trips.html.twig
@@ -136,7 +136,7 @@
 
                                     <td class="text-end">
                                         <div class="text-gray-800 text-capitalize">{{ order.customer_name }}</div>
-                                        <div class="text-gray-600">{#{{ order.email }}#}</div>
+                                        <div class="text-gray-600">{{ order.email }}</div>
 
 
                                         {% if order.phone is defined %}
@@ -147,7 +147,7 @@
 
                                     </td>
                                     <td class="text-end">
-                                        <span class="text-gray-600 text-capitalize">{#{{ order.school }}#}</span>
+                                        <span class="text-gray-600 text-capitalize">{{ order.school }}</span>
                                     </td>
 
                                     <td>
