change pesquisa na statistics

--- a/templates/private/statistics/statistics.html.twig
+++ b/templates/private/statistics/statistics.html.twig
@@ -26,7 +26,7 @@
                         <div class="d-flex flex-stack flex-wrap gap-4">
                             <div class="d-flex align-items-center fw-bold">
                                 <div class="text-gray-400 fs-7 me-2">Viagem</div>
-                                {{ form_widget(form.product, { attr: { class: "form-select form-select-transparent text-dark fs-7 lh-1 fw-bold py-0 ps-3", "data-control": "select2", "data-dropdown-css-class": "w-300px" , "data-hide-search": "true" } }) }}
+                                {{ form_widget(form.product, { attr: { class: "form-select w-200px max-w-200px form-select-transparent text-dark fs-7 lh-1 fw-bold py-0 ps-3", "data-control": "select2", "data-dropdown-css-class": "w-300px" , "data-hide-search": "false"  } }) }}
                             </div>
                             <button type="submit" class="btn btn-sm btn-flex h-40px py-2 bg-secondary btn-color-gray-700 btn-active-color-primary fw-bold">
 {#                                <span class="svg-icon svg-icon-6 svg-icon-muted me-1">
